# ai-dev-browser

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  adb  adb.cmd  aidb  aidb.cmd  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ai_dev_browser/: __init__.py  __main__.py  _cli.py  _version.py  profile.py
ai_dev_browser/cdp/: __init__.py  accessibility.py  animation.py  audits.py  autofill.py  browser.py  cache_storage.py  cast.py  console.py  crash_report_context.py  css.py  database.py  debugger.py  device_orientation.py  dom.py  dom_debugger.py  dom_snapshot.py  dom_storage.py  emulation.py  extensions.py  fetch.py  file_system.py  headless_experimental.py  heap_profiler.py  indexed_db.py  inspector.py  io.py  layer_tree.py  log.py  media.py  memory.py  network.py  overlay.py  page.py  performance_timeline.py  preload.py  profiler.py  pwa.py  runtime.py  storage.py  (+6 more)
ai_dev_browser/core/: __init__.py  _case.py  _cf_template.py  _element.py  _tab.py  _transport.py  ax.py  browser.py  cdp.py  chrome.py  cloudflare.py  config.py  connection.py  cookies.py  dialog.py  download.py  elements.py  human.py  login.py  mouse.py  navigation.py  overlays.py  page.py  port.py  process.py  session.py  snapshot.py  storage.py  tabs.py  text_match.py  window.py
ai_dev_browser/pool/: __init__.py  persistence.py  pool.py  worker.py
ai_dev_browser/tools/: __init__.py  _cli.py  _generate.py  ax_select.py  ax_tree.py  browser_list.py  browser_start.py  browser_stop.py  cdp_send.py  cf_verify.py  click_by_html_id.py  click_by_ref.py  click_by_text.py  click_by_xpath.py  click_ref.py  click_text.py  cloudflare_verify.py  cookies_list.py  cookies_load.py  cookies_save.py  dialog_respond.py  download.py  download_file.py  download_path.py  drag_by_ref.py  element_click.py  element_find.py  element_focus.py  element_text.py  element_type.py  element_wait.py  element_xpath.py  find.py  find_by_html_id.py  find_by_xpath.py  focus_by_ref.py  highlight_by_ref.py  hover_by_ref.py  html_by_ref.py  js_evaluate.py  (+38 more)
nodriver_kit/: __init__.py  cloudflare.py  cookies.py  profile.py
nodriver_kit/browser/: __init__.py  chrome.py  port.py
nodriver_kit/core/: __init__.py  chrome.py  cloudflare.py  config.py  connection.py  elements.py  mouse.py  navigation.py  port.py  process.py  session.py  snapshot.py  storage.py  tabs.py  window.py
nodriver_kit/pool/: __init__.py  job.py  persistence.py  pool.py
nodriver_kit/tools/: __init__.py  _cli.py  ax_select.py  ax_tree.py  browser_list.py  browser_start.py  browser_stop.py  cdp_send.py  cf_verify.py  click.py  cookies_list.py  cookies_load.py  cookies_save.py  download_file.py  download_path.py  element_click.py  element_find.py  element_focus.py  element_text.py  element_type.py  element_wait.py  element_xpath.py  evaluate.py  find.py  focus.py  goto.py  html.py  login_interactive.py  mouse_click.py  mouse_drag.py  mouse_move.py  page_eval.py  page_goto.py  page_html.py  page_info.py  page_reload.py  page_screenshot.py  page_wait.py  page_wait_url.py  reload.py  (+17 more)
scripts/: sync_cdp.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  scenarios_workspace.json  test_advanced_workflows.py  test_browser_lifecycle.py  test_click.py  test_core_browser_workflows.py  test_dialog.py  test_elements.py  test_find_and_interact_workflows.py  test_human_config.py  test_locator_workflows.py  test_mouse.py  test_multi_profile_pool.py  test_navigation.py  test_new_apis.py  test_storage.py  test_tab_and_cookie_workflows.py  test_tabs.py  test_timeout_and_retry.py  test_type.py  test_window.py  test_workflows.py  test_workspace_workflows.py
tests/unit/: test_case.py  test_cli_param_type.py  test_no_acronym_rot.py
tools/: README.md  _common.py  browser_list.py  browser_start.py  browser_stop.py  cdp_send.py  cf_verify.py  cookies_list.py  cookies_load.py  cookies_save.py  download_file.py  download_path.py  element_click.py  element_find.py  element_scroll.py  element_type.py  element_wait.py  element_xpath.py  js_execute.py  login_interactive.py  mouse_click.py  mouse_drag.py  mouse_move.py  page_goto.py  page_html.py  page_info.py  page_reload.py  page_screenshot.py  page_snapshot.py  page_wait.py  storage_get.py  storage_set.py  tab_close.py  tab_list.py  tab_new.py  tab_switch.py  wait_url.py  window_resize.py  window_state.py
