[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dev-browser"
dynamic = ["version"]
description = "A browser for AI to develop web automation — human-like automation that works seamlessly in a world designed for humans"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.10"
authors = [
    {name = "sudoprivacy"}
]
keywords = ["browser", "automation", "cdp", "pool", "cloudflare", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "websockets>=13.0",  # For async CDP WebSocket connection
    "websocket-client>=1.0",  # For CDP in-use detection (sync)
    "Pillow>=10.0",  # For screenshot CSS scaling
    "deprecated>=1.2",  # For vendored CDP protocol module
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
cv = [
    "opencv-python>=4.8",  # For verify_cf() template matching
]
fuzzy = [
    "rapidfuzz>=3.0",  # Fast C-based Levenshtein for fuzzy_find/fuzzy_click
]

[project.urls]
Homepage = "https://github.com/sudoprivacy/ai-dev-browser"
Repository = "https://github.com/sudoprivacy/ai-dev-browser"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_dev_browser*"]

[tool.ruff]
extend-exclude = ["ai_dev_browser/cdp"]  # Vendored auto-generated CDP module

[tool.mypy]
exclude = ["ai_dev_browser/cdp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

# Version is derived from the latest git tag (SSOT).
# Never hand-edit a version string anywhere — just `git tag vX.Y.Z`.
[tool.setuptools_scm]
fallback_version = "0.0.0"
